# agent-kit

./: .gitignore  README.md  justfile  pyproject.toml
examples/: sample.jsonl  stub_server.py
src/agent_kit/: __init__.py  cli.py  judges.py  runner.py  types.py
tests/: test_e2e.py  test_judges.py  test_runner.py
