[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-kit"
version = "0.1.0"
description = "Language-neutral evaluation harness for agent products. HTTP runner + deterministic judges."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Andy Bird", email = "andy@cherrygalore.com" }]
dependencies = [
  "httpx>=0.27",
  "jsonschema>=4.21",
  "rich>=13.7",
]

[project.scripts]
agent-kit = "agent_kit.cli:main"

[project.urls]
Homepage = "https://github.com/b1rdmania/agent-kit"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_kit"]
